ruapc-macro/tests/ui/fail/on_struct.rs
//! The `#[service]` attribute only applies to traits.

#[ruapc::service]
pub struct Foo;

fn main() {}
