ruapc-macro/tests/ui/fail/on_struct.stderr
error: expected `trait`
 --> tests/ui/fail/on_struct.rs:4:5
  |
4 | pub struct Foo;
  |     ^^^^^^
